# sctui

./: .gitignore  BUILD_DIARY.md  Cargo.toml  DEV_DIARY.md  LICENSE  README.md
.github/workflows/: ci.yml
src/: api.rs  auth.rs  main.rs  player.rs  tui.rs
src/api/: mod.rs  models.rs  utils.rs
src/api/calls/: albums.rs  engagement.rs  following.rs  likes.rs  mod.rs  playlists.rs  search.rs
src/auth/: mod.rs  oauth.rs  refresh.rs  token.rs
src/player/: commands.rs  controller.rs  mod.rs  stream.rs  worker.rs
src/player/stream/: cache.rs  downloader.rs  engine.rs  hls.rs  mod.rs  sample.rs
src/tui/: mod.rs
src/tui/logic/: animation.rs  filtering.rs  input.rs  mod.rs  state.rs  utils.rs
src/tui/logic/input/: commands.rs  helpers.rs  mod.rs  movement.rs  navigation.rs  playback.rs  queue.rs  quit.rs  search.rs
src/tui/render/: mod.rs  now_playing.rs  utils.rs  visualizer.rs
src/tui/render/overlays/: help.rs  mod.rs  queue.rs  quit.rs  utils.rs
src/tui/render/tabs/: feed.rs  library.rs  mod.rs  search.rs
src/tui/render/visualizer/: common.rs  mod.rs  oscilloscope.rs  spectrum.rs
