[package]
name = "sctui"
version = "0.1.0"
description = "a soundcloud client for the terminal"
authors = ["Will Murphy <illogicallledits@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
color-eyre = "0.6.3"
anyhow = "1"
base64 = "0.22"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
tiny_http = "0.12"
url = "2"
webbrowser = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
dotenvy = "0.15"
serde_json = "1.0.145"
chrono = { version = "0.4", features = ["serde"] }
stream-download = { version = "0.22.7", features = ["reqwest-native-tls"] }
tokio = {version = "1.47.1", features = ["rt-multi-thread"] }
rodio = "0.21.1"
futures = "0.3.31"
ratatui-image = "8.0.1"
image = "0.25.8"
dasp_sample = "0.11"
